# AlarmManagerService_on_linux

./: README.md  meson.build
jni/: android_os_SystemClock_Companion.cpp  cfig_AHelper_Companion.cpp  com_android_server_AlarmManagerService_Companion.cpp
jni/include/: android_os_SystemClock_Companion.h  cfig_AHelper_Companion.h
